# dostoevsky-backend

./: Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  init-letsencrypt.sh  makefile  model.py  orm.py  pyproject.toml  repository.py  requirements.txt  test_orm.py  test_repository.py
.github/workflows/: test.yml
app/: Dockerfile  constants.py  requirements.txt
app/app/: constants.py  serializers.py  settings.py  urls.py  views.py
app/part/: models.py  serializers.py  urls.py  utils.py  views.py
app/part/data/: 2020.pkl  categories.csv
app/part/management/commands/: fill_db.py
app/part/migrations/: 0001_initial.py  0002_auto_20200822_0846.py
app/part/tests/: test_data.py  test_parts_api.py  test_token.py
app/part/tests/test_files/: test_params.json
app/snapshot_tests/: conftest.py  test_full_data.py  test_snapshot_tests.py
app/templates/: swagger-ui.html
app/tests/: conftest.py  pytest.ini  test_parts_api.py  test_token.py  test_token_authorization.py
app/tests/part/management/commands/: test_data.py  test_db_command.py
nginx/: Dockerfile  nginx.conf
nginx/vhost.d/: default
old_tsts/snapshot_tsts/: _conftest.py  _test_full_data.py
src/: setup.py
src/dostoevsky/: config.py  flask_app.py  model.py  orm.py  repository.py
src/dostoevsky/adapters/: orm.py  repository.py
src/dostoevsky/entrypoints/: flask_app.py
src/dostoevsky/service_layer/: services.py
tests/: conftest.py
tests/src/: test_api.py  test_orm.py  test_repository.py
webserver/: default.conf
(+19 files in other folders)
