[tool.poetry]
name = "dostoevsky"
version = "0.1.0"
description = ""
authors = ["Ekaterina Borovikova <borovikova@zoho.eu>"]

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.4.23"
Flask = "^2.0.1"
black = "^21.9b0"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
